--- a/app/views/customer/services/index.html.erb
+++ b/app/views/customer/services/index.html.erb
@@ -19,89 +19,116 @@
 
   <div class="row">
     <div class="col-sm-12">
-      <!--<table class="table table-striped">-->
-        <!--<thead>-->
-        <!--<tr class="info">-->
-          <!--<th>Description</th>-->
-          <!--<th>Category</th>-->
-          <!--<th>Subcategory</th>-->
-          <!--&lt;!&ndash;<th>Start at</th>&ndash;&gt;-->
-          <!--&lt;!&ndash;<th>End at</th>&ndash;&gt;-->
-          <!--<th>Action</th>-->
-        <!--</tr>-->
-        <!--</thead>-->
-        <!--<tbody>-->
-        <!--<%# @services.each_with_index do |service, index| %>-->
-            <!--<tr class="data">-->
-              <!--<td><%#= service.service_description%></td>-->
-              <!--<td><%#= service.subcategory.category.name %></td>-->
-              <!--<td><%#= service.subcategory.name %></td>-->
-              <!--&lt;!&ndash;<td><%#= service.start_at.strftime(time_format) %></td>&ndash;&gt;-->
-              <!--&lt;!&ndash;<td><%#= service.end_at.strftime(time_format) %></td>&ndash;&gt;-->
-              <!--<td>-->
-                <!--<%#= link_to customer_service_path(service) do %>-->
-                    <!--<i class="fa fa-eye"></i>-->
-                <!--<%# end %>-->
-                <!--<%#= link_to edit_customer_service_path(service) do %>-->
-                    <!--<i class="fa fa-edit"></i>-->
-                <!--<%# end %>-->
-                <!--<%#= link_to customer_service_path(service), method: :delete, data: { confirm: 'Are you sure?' }, class: 'text-danger' do %>-->
-                    <!--<i class="fa fa-trash fa-3"></i>-->
-                <!--<%#- end %>-->
-              <!--</td>-->
-            <!--</tr>-->
-        <!--<%#- end %>-->
-        <!--</tbody>-->
-      <!--</table>-->
       <div class="customer-main-show">
-        <% if @services.present? %>
-            <% @services.each_with_index do |service, index| %>
-                <div class="white-bg">
-                  <div class="col-md-2 col-sm-3 col-xs-12 text-center">
-                    <div class="add-image-con">
-                      <% if service.service_images.any? %>
-                          <%= image_tag service.service_images.first.image(:size_500x500), class: 'img-responsive' %>
-                      <% else %>
-                          <%= image_tag "theme_img/500x500.png", class: 'img-responsive' %>
-                      <% end %>
-                    </div>
-                  </div>
-                  <div class="col-md-10 col-sm-9 col-xs-12">
-                    <h2 class="heading"><%= service.subcategory.name.capitalize %></h2>
-                    <span>Status: <%= service.admin_verified ? 'Approved' : 'Pending' %></span>
-                    <h5 class="time-option"><%= service.start_at.strftime(time_format) %> - <%= service.end_at.strftime(time_format) %></h5>
-                    <p class="description"><%= service.service_description %></p>
-                    <div class="dropdown-main">
-                      <span dyn_click="<%= index + 1 %>" class="sort-arrow"><i class="fa fa-angle-down" aria-hidden="true"></i></span>
-                      <div class="clearfix"></div>
-                      <ul class="dropdown-option product_<%= index + 1 %>">
-                        <span class="arrow-top"></span>
-                        <li>
-                          <%= link_to customer_service_path(service) do %>
-                              <i class="fa fa-eye"></i> Show
-                          <%- end %>
-                        </li>
-                        <% unless service.is_enquired %>
+        <ul class="nav nav-tabs">
+          <li class="active"><a data-toggle="tab" href="#approved">Approved (<%=  @services.where(admin_verified: true).count %>)</a></li>
+          <li><a data-toggle="tab" href="#pending">Pending (<%=  @services.where(admin_verified: false).count %>)</a></li>
+        </ul>
+
+        <div class="tab-content">
+          <div id="approved" class="tab-pane fade in active">
+            <% if @services.where(admin_verified: true).present? %>
+                <% @services.where(admin_verified: true).each_with_index do |service, index| %>
+                    <div class="white-bg">
+                      <div class="col-md-2 col-sm-3 col-xs-12 text-center">
+                        <div class="add-image-con">
+                          <% if service.service_images.any? %>
+                              <%= image_tag service.service_images.first.image(:size_500x500), class: 'img-responsive' %>
+                          <% else %>
+                              <%= image_tag "theme_img/500x500.png", class: 'img-responsive' %>
+                          <% end %>
+                        </div>
+                      </div>
+                      <div class="col-md-10 col-sm-9 col-xs-12">
+                        <h2 class="heading"><%= service.subcategory.name.capitalize %></h2>
+                        <span>Status: <%= service.admin_verified ? 'Approved' : 'Pending' %></span>
+                        <h5 class="time-option"><%= service.start_at.strftime(time_format) %> - <%= service.end_at.strftime(time_format) %></h5>
+                        <p class="description"><%= service.service_description %></p>
+                        <div class="dropdown-main">
+                          <span dyn_click="<%= index + 1 %>" class="sort-arrow"><i class="fa fa-angle-down" aria-hidden="true"></i></span>
+                          <div class="clearfix"></div>
+                          <ul class="dropdown-option product_<%= index + 1 %>">
+                            <span class="arrow-top"></span>
                             <li>
-                              <%= link_to edit_customer_service_path(service) do %>
-                                  <i class="fa fa-edit"></i> Edit
+                              <%= link_to customer_service_path(service) do %>
+                                  <i class="fa fa-eye"></i> Show
                               <%- end %>
                             </li>
-                        <% end %>
-                        <li class="no_border">
-                          <%= link_to customer_service_path(service), method: :delete, data: { confirm: 'Are you sure?' }, class: 'text-danger' do %>
-                              <i class="fa fa-trash fa-3"></i> Delete
-                          <%- end %>
-                        </li>
-                      </ul>
+                            <% unless service.is_enquired %>
+                                <li>
+                                  <%= link_to edit_customer_service_path(service) do %>
+                                      <i class="fa fa-edit"></i> Edit
+                                  <%- end %>
+                                </li>
+                            <% end %>
+                            <li class="no_border">
+                              <%= link_to customer_service_path(service), method: :delete, data: { confirm: 'Are you sure?' }, class: 'text-danger' do %>
+                                  <i class="fa fa-trash fa-3"></i> Delete
+                              <%- end %>
+                            </li>
+                          </ul>
+                        </div>
+                      </div>
+                      <div class="clearfix"></div>
                     </div>
-                  </div>
-                  <div class="clearfix"></div>
-                </div>
-            <%- end %>
-        <% else %>
-            <h2 class="text-center">No Service Available</h2>
-        <% end %>
+                <%- end %>
+            <% else %>
+                <div class="gap"></div>
+                <h2 class="text-center">No Service Available</h2>
+            <% end %>
+          </div>
+          <div id="pending" class="tab-pane fade">
+            <% if @services.where(admin_verified: false).present? %>
+                <% @services.where(admin_verified: false).each_with_index do |service, index| %>
+                    <div class="white-bg">
+                      <div class="col-md-2 col-sm-3 col-xs-12 text-center">
+                        <div class="add-image-con">
+                          <% if service.service_images.any? %>
+                              <%= image_tag service.service_images.first.image(:size_500x500), class: 'img-responsive' %>
+                          <% else %>
+                              <%= image_tag "theme_img/500x500.png", class: 'img-responsive' %>
+                          <% end %>
+                        </div>
+                      </div>
+                      <div class="col-md-10 col-sm-9 col-xs-12">
+                        <h2 class="heading"><%= service.subcategory.name.capitalize %></h2>
+                        <span>Status: <%= service.admin_verified ? 'Approved' : 'Pending' %></span>
+                        <h5 class="time-option"><%= service.start_at.strftime(time_format) %> - <%= service.end_at.strftime(time_format) %></h5>
+                        <p class="description"><%= service.service_description %></p>
+                        <div class="dropdown-main">
+                          <span dyn_click="<%= index + 1 %>" class="sort-arrow"><i class="fa fa-angle-down" aria-hidden="true"></i></span>
+                          <div class="clearfix"></div>
+                          <ul class="dropdown-option product_<%= index + 1 %>">
+                            <span class="arrow-top"></span>
+                            <li>
+                              <%= link_to customer_service_path(service) do %>
+                                  <i class="fa fa-eye"></i> Show
+                              <%- end %>
+                            </li>
+                            <% unless service.is_enquired %>
+                                <li>
+                                  <%= link_to edit_customer_service_path(service) do %>
+                                      <i class="fa fa-edit"></i> Edit
+                                  <%- end %>
+                                </li>
+                            <% end %>
+                            <li class="no_border">
+                              <%= link_to customer_service_path(service), method: :delete, data: { confirm: 'Are you sure?' }, class: 'text-danger' do %>
+                                  <i class="fa fa-trash fa-3"></i> Delete
+                              <%- end %>
+                            </li>
+                          </ul>
+                        </div>
+                      </div>
+                      <div class="clearfix"></div>
+                    </div>
+                <%- end %>
+            <% else %>
+                <div class="gap"></div>
+                <h2 class="text-center">No Service Available</h2>
+            <% end %>
+          </div>
+        </div>
       </div>
     </div>
   </div>
