--- a/app/views/subcategories/show.html.erb
+++ b/app/views/subcategories/show.html.erb
@@ -51,6 +51,17 @@
                     <label>Subcategory</label>
                     <%= select_tag "subcategory_id", options_for_select(subcategory_for_collection, params[:subcategory_id]), prompt: "choose subcategory", class: 'form-control set-subcategory filter_subcategory' %>
                   </div>
+
+                  <div class="form-group">
+                    <label>State</label>
+                    <%= select_tag "state_id", options_for_select(state_for_collection, params[:state_id]), prompt: "choose state", class: 'form-control set-state filter_state' %>
+                  </div>
+
+                  <div class="form-group">
+                    <label>City</label>
+                    <%= select_tag "city_id", options_for_select(city_for_collection, params[:city_id]), prompt: "choose city", class: 'form-control set-city filter_city' %>
+                  </div>
+                  <span class="reset-filter btn btn-primary save-full-btn" style="cursor: pointer">Reset</span>
                   <input type="submit" class="btn btn-primary save-full-btn">
                 </form>
             </div>
@@ -166,19 +177,41 @@
       $('.custome-filter-block .set-rating').val("<%= params[:rating].present? ?  params[:rating] : 0 %>")
 
       var selected_category_id = $('.filter_category').val();
+      var selected_subcategory_id = $('.filter_subcategory').val();
+      var selected_state_id = $('.filter_state').val();
+      var selected_city_id = $('.filter_city').val();
 
       $.get("/get_subcategories/"+ selected_category_id +".json", function(data, status){
-          var appendString = '';
+          var appendString = '<option value="">Select subcategory</option>';
           for(var i=0; i < data.length;i++){
               appendString +="<option value="+data[i].id+">" + data[i].name + "</option>";
           }
-          $('.filter_subcategory').html(appendString);
+          $('.filter_subcategory').html(appendString); $('.filter_subcategory').val(selected_subcategory_id);
+          $('.filter_subcategory').val(selected_subcategory_id);
+      });
+
+      $.get("/cities/collection_by_state/"+selected_state_id+".json", function(data, status){
+          var appendString = '<option value="">Select city</option>';
+          for(var i=0; i < data.length;i++){
+              appendString +="<option value="+data[i].id+">" + data[i].name + "</option>";
+          }
+          $('.filter_city').html(appendString);
+          $('.filter_city').val(selected_city_id);
+      });
+
+      $(".custome-filter-block .set-state").change(function() {
+          var selected_state_id = this.value;
+          $.get("/cities/collection_by_state/"+selected_state_id+".json", function(data, status){
+              var appendString = '<option value="">Select city</option>';
+              for(var i=0; i < data.length;i++){
+                  appendString +="<option value="+data[i].id+">" + data[i].name + "</option>";
+              }
+              $('.filter_city').html(appendString);
+          });
       });
 
       $('.custome-filter-block .set-category').change(function(){
-
           var selected_category_id = this.value;
-
           $.get("/get_subcategories/"+ selected_category_id +".json", function(data, status){
               var appendString = '<option value="">Select Subcategory</option>';
               for(var i=0; i < data.length;i++){
@@ -186,7 +219,10 @@
               }
               $('.filter_subcategory').html(appendString);
           });
+      });
 
+      $('.reset-filter').click(function(){
+          window.location.href = location.pathname
       });
 
   });
