--- a/app/views/customer/products/_form.html.erb
+++ b/app/views/customer/products/_form.html.erb
@@ -110,7 +110,7 @@
     </div>
     <div class="col-xs-12">
       <div class="field-con">
-        <%= f.input :youtube_link, label: 'Product Youtube Link ⓘ' ,label_html: {class: 'label', 'data-toggle': 'popover', 'data-placement': 'right' , title: 'Product Youtube Link'}, input_html: {class: 'text-discription'} %>
+        <%= f.input :youtube_link, label: 'Product Youtube Link ⓘ' ,label_html: {class: 'label', 'data-toggle': 'popover', 'data-placement': 'right' , title: 'We suggest to make video of your product, upload the video on youtube and share the link of your youtube video for better demonstration of your product.'}, input_html: {class: 'text-discription'} %>
       </div>
     </div>
     <div class="col-xs-12">
