--- a/app/views/customer/shared/_header.html.erb
+++ b/app/views/customer/shared/_header.html.erb
@@ -108,7 +108,7 @@
         </div>
         <div class="collapse navbar-collapse" id="main-nav-collapse">
           <ul class="nav navbar-nav">
-            <li class="dropdown"><a href="javascript:void(0)"><i class="fa fa-reorder"></i>&nbsp; Shop by Category<i class="drop-caret" data-toggle="dropdown"></i></a>
+            <li class="dropdown"><a href="javascript:void(0)"><i class="fa fa-reorder"></i>&nbsp; Rent by Category<i class="drop-caret" data-toggle="dropdown"></i></a>
               <ul class="dropdown-menu dropdown-menu-category">
                 <!--<li><a href="/products">Products</a></li>-->
                 <!--<li><a href="/services">Services</a></li>-->
