--- a/app/views/welcome/shared/_header.html.erb
+++ b/app/views/welcome/shared/_header.html.erb
@@ -66,7 +66,7 @@
       <div class="gap gap-small"></div>
       <ul class="list-inline">
         <li>
-          <a href="#nav-mobile-dialog" class="popup-text">Click to Register</a>
+          <a href="#nav-mobile-dialog" class="popup-text">New user? Sign up</a>
         </li>
         <li class="pull-right">
           <a href="#nav-forgot-password-dialog" class="popup-text">Forgot password?</a>
@@ -172,7 +172,7 @@
         </div>
         <div class="collapse navbar-collapse" id="main-nav-collapse">
           <ul class="nav navbar-nav">
-            <li class="dropdown"><a href="javascript:void(0)"><i class="fa fa-reorder"></i>&nbsp; Shop by Category<i class="drop-caret" data-toggle="dropdown"></i></a>
+            <li class="dropdown"><a href="javascript:void(0)"><i class="fa fa-reorder"></i>&nbsp; Rent by Category<i class="drop-caret" data-toggle="dropdown"></i></a>
               <ul class="dropdown-menu dropdown-menu-category">
                 <% @categories.each do |category| %>
                     <li><a href="<%= category_path(category)%>">
@@ -251,7 +251,7 @@
                 <li class="dropdown">
                   <!--<a href="#nav-account-dialog" data-effect="mfp-move-from-top" class="popup-text">Start</a>-->
                   <!--<a href="javascript:void(0)">Start</a>-->
-                  <a href="#nav-login-dialog" class="popup-text login-nav-button">Start</a>
+                  <a href="#nav-login-dialog" class="popup-text login-nav-button">Sign in / Sign up</a>
                   <!--<ul class="dropdown-menu dropdown-menu-shipping-cart">-->
                     <!--<li>-->
                       <!--<a href="#nav-login-dialog" class="popup-text login-nav-button">Login</a>-->
