--- a/app/views/searches/show.html.erb
+++ b/app/views/searches/show.html.erb
@@ -60,7 +60,7 @@
                   <label>City</label>
                   <%= select_tag "city_id", options_for_select(city_for_collection, params[:city_id]), prompt: "choose city", class: 'form-control set-city filter_city' %>
                 </div>
-                <span class="reset-filter btn btn-primary save-full-btn" style="cursor: pointer">Reset</span>
+                <span class="reset-filter btn btn-primary save-full-btn" style="cursor: pointer; margin-bottom: 10px">Reset</span>
                 <input type="submit" class="btn btn-primary save-full-btn">
               </form>
             </div>
