--- a/app/views/customer/advertisements/show.html.erb
+++ b/app/views/customer/advertisements/show.html.erb
@@ -117,7 +117,7 @@
             </div>
           </div>
           <div class="col-xs-12">
-            <h2>Ohters</h2>
+            <h2>Others</h2>
           </div>
           <div class="col-xs-12">
             <div class="product-detail">
