--- a/app/views/customer/products/index.html.erb
+++ b/app/views/customer/products/index.html.erb
@@ -36,9 +36,11 @@
                         <h5 class="time-option"><%= product.start_at.strftime(time_format) %> - <%= product.end_at.strftime(time_format) %></h5>
                         <p class="description"><%= product.description %></p>
                         <div class="dropdown-main">
-                          <span dyn_click="<%= index + 1 %>" class="sort-arrow"><i class="fa fa-angle-down" aria-hidden="true"></i></span>
+                          <!--dyn_click="<%#= index + 1 %>"-->
+                          <span class="sort-arrow"><i class="fa fa-angle-down" aria-hidden="true"></i></span>
                           <div class="clearfix"></div>
-                          <ul class="dropdown-option product_<%= index + 1 %>">
+                          <!--product_<%#= index + 1 %>-->
+                          <ul class="dropdown-option">
                             <span class="arrow-top"></span>
                             <li>
                               <%= link_to customer_product_path(product) do %>
@@ -88,9 +90,9 @@
                         <h5 class="time-option"><%= product.start_at.strftime(time_format) %> - <%= product.end_at.strftime(time_format) %></h5>
                         <p class="description"><%= product.description %></p>
                         <div class="dropdown-main">
-                          <span dyn_click="<%= index + 1 %>" class="sort-arrow"><i class="fa fa-angle-down" aria-hidden="true"></i></span>
+                          <span class="sort-arrow"><i class="fa fa-angle-down" aria-hidden="true"></i></span>
                           <div class="clearfix"></div>
-                          <ul class="dropdown-option product_<%= index + 1 %>">
+                          <ul class="dropdown-option">
                             <span class="arrow-top"></span>
                             <li>
                               <%= link_to customer_product_path(product) do %>
