--- a/app/assets/stylesheets/customer/style.scss
+++ b/app/assets/stylesheets/customer/style.scss
@@ -294,10 +294,15 @@
         background-color: #f2f2f2;
         position: relative;
         margin-top: 10px;
-        display: none;
+        opacity: 0;
         -webkit-border-radius: 3px;
         -moz-border-radius: 3px;
         border-radius: 3px;
+        -webkit-transition: all 0.6s ease-in-out;
+        -moz-transition: all 0.6s ease-in-out;
+        -ms-transition: all 0.6s ease-in-out;
+        -o-transition: all 0.6s ease-in-out;
+        transition: all 0.6s ease-in-out;
         span.arrow-top{
           display: inline-block;
           width: 0;
@@ -376,6 +381,15 @@
       }
     }
   }
+}
+
+.customer-main-show .white-bg .dropdown-main:hover > .dropdown-option{
+  opacity: 1;
+  -webkit-transition: all 0.6s ease-in-out;
+  -moz-transition: all 0.6s ease-in-out;
+  -ms-transition: all 0.6s ease-in-out;
+  -o-transition: all 0.6s ease-in-out;
+  transition: all 0.6s ease-in-out;
 }
 
 .searches_main_con{
